Fixed bug: Menu must always be visible in tablet mode

--- a/css/index.css
+++ b/css/index.css
@@ -270,7 +270,7 @@ section {
 
 @supports (text-wrap: nowrap) {
     .menu__list li a {
-        text-wrap: nowrap;
+        text-wrap: nowrap; /* Not supported by Safari < 17.4 */
     }
 }
 
@@ -562,7 +562,7 @@ section {
 
 @supports (text-wrap: nowrap) {
     .card__title {
-        text-wrap: nowrap;
+        text-wrap: nowrap; /* Not supported by Safari < 17.4 */
     }
 }
 
@@ -674,6 +674,7 @@ section {
     }
 
     .flex--menu {
+        display: flex;
         flex: 1 1 90%;
     }
 
